# fast-deconv

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  conanfile.txt  pyproject.toml
fast_deconv/: __init__.py
include/: gpu_utils.h  wscms.h
include/fast_deconv/algorithm/: wscms.hpp  wscms_types.hpp
include/fast_deconv/algorithm/detail/: rect.hpp  wscms.hpp
include/fast_deconv/core/: mdarray.hpp  memory_policy.hpp  span_types.hpp  stream_cache.hpp  stream_resources.hpp
include/fast_deconv/linalg/: kronecker.cuh
include/fast_deconv/linalg/detail/: kronecker.cuh
include/fast_deconv/matrix/: argmax.cuh  argmax.hpp
include/fast_deconv/matrix/detail/: argmax.cuh  argmax.hpp
include/fast_deconv/util/: cuda_macros.hpp  kernel_bench.hpp
include/fast_deconv/util/detail/: benchmark.hpp
python/fast_deconv/: _init_.py
python/pyfast_deconv/: __init__.py
src/: add.cu  argmax.cu  argmax.cuh  gpu_utils.h  kernels.cpp  kronecker_example.cu  kronecker_example.cuh  main.cpp  main.cu  rect.h  utils.cuh  wscms.cpp  wscms_example.cu
src/algorithms/: clean_dirty.cu  clean_dirty.cuh
src/examples/: kronecker_example.cu  kronecker_tensor_example.cu  kronecker_tensor_example.cuh  wscms_example.cuh
src/python/: binding_argmax.cpp  binding_matrix.cpp  binding_wscms.cpp  module.cpp
tests/: run_benchmarks.py  test.py  test_kernels.py
